init project settings and pages

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="src/css/common.190be9b5de9a0b61829b.min.css">
+    <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body>
 <h1>Hello Index</h1>
+<script src="src/js/common.190be9b5de9a0b61829b.min.js"></script>
+<script src="src/js/index.190be9b5de9a0b61829b.min.js"></script>
 </body>
 </html>
