--- a/company.html
+++ b/company.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Company</title>
+    <link rel="stylesheet" href="src/css/common.190be9b5de9a0b61829b.min.css">
+    <link rel="stylesheet" href="src/css/company.css">
 </head>
 <body>
 <h1>Hello Company</h1>
+<script src="src/js/common.190be9b5de9a0b61829b.min.js"></script>
+<script src="src/js/company.190be9b5de9a0b61829b.min.js"></script>
 </body>
 </html>
