--- a/index.html
+++ b/index.html
@@ -2,42 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Index</title>
-    <link rel="stylesheet" href="src/css/common.css">
+    <link rel="stylesheet" href="src/css/common.190be9b5de9a0b61829b.min.css">
     <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body>
-<div class="footer">
-    <div class="b-container footer__items">
-        <div class="footer__item-logo">
-            <img class="footer__logo" src="src/images/30-layers.svg" alt="МТБанк">
-        </div>
-        <div class="footer__item-social">
-            <a class="footer__social-link" href="">
-                <img class="footer__social-img" src="src/images/copy-8.svg"
-                     alt="Facebook"
-                     title="Facebook">
-            </a>
-            <a class="footer__social-link" href="">
-                <img class="footer__social-img" src="src/images/copy-9.svg" alt="Twitter"
-                     title="Twitter">
-            </a>
-            <a class="footer__social-link" href="">
-                <img class="footer__social-img" src="src/images/copy-10.svg"
-                     alt="Instagram"
-                     title="Instagram">
-            </a>
-        </div>
-        <div class="footer__description">
-            <p>
-                ЗАО «МТБанк». Все права защищены. Лицензия на осуществление банковской деятельности №13 от 06.05.2013г.
-                УНП 100394906.
-            </p>
-        </div>
-    </div>
-</div>
-<script src="src/js/common.js"></script>
-<script src="src/js/index.js"></script>
+<h1>Hello Index</h1>
+<script src="src/js/common.190be9b5de9a0b61829b.min.js"></script>
+<script src="src/js/index.190be9b5de9a0b61829b.min.js"></script>
 </body>
 </html>
