creating catalog section complete

--- a/index.html
+++ b/index.html
@@ -8,23 +8,148 @@
     <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body>
+<div class="catalog">
+    <div class="b-container catalog__items">
+        <h2 class="catalog__caption">
+            каталог
+        </h2>
+        <p class="catalog__description">
+            Более 1000 организаций-партнеров
+        </p>
+        <div class="catalog__wrapper">
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        пищевая продукция
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        канцелярские товары
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        оборудование
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        текстиль и одежда
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        строительство
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        сельское хозяйство
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        металлопрокат
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        мебель и интерьер
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        машины и запчасти
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        электротехника и по
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        грузоперевозки
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        окна и двери
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        маркетинговые услуги
+                    </h4>
+                </a>
+            </div>
+            <div class="catalog__item">
+                <a class="category" href="#">
+                    <img class="category__img" src="assets/icons/rect@2x.png">
+                    <h4 class="category__caption">
+                        услуги для бизнеса
+                    </h4>
+                </a>
+            </div>
+
+        </div>
+    </div>
+</div>
 <div class="footer">
     <div class="b-container footer__items">
         <div class="footer__item-logo">
-            <img class="footer__logo" src="src/images/30-layers.svg" alt="МТБанк">
+            <img class="footer__logo" src="assets/icons/mtbank.svg" alt="МТБанк">
         </div>
         <div class="footer__item-social">
             <a class="footer__social-link" href="">
-                <img class="footer__social-img" src="src/images/copy-8.svg"
+                <img class="footer__social-img" src="assets/icons/facebook.svg"
                      alt="Facebook"
                      title="Facebook">
             </a>
             <a class="footer__social-link" href="">
-                <img class="footer__social-img" src="src/images/copy-9.svg" alt="Twitter"
+                <img class="footer__social-img" src="assets/icons/twitter.svg" alt="Twitter"
                      title="Twitter">
             </a>
             <a class="footer__social-link" href="">
-                <img class="footer__social-img" src="src/images/copy-10.svg"
+                <img class="footer__social-img" src="assets/icons/instagram.svg"
                      alt="Instagram"
                      title="Instagram">
             </a>
