--- a/company.html
+++ b/company.html
@@ -3,12 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <title>Company</title>
-    <link rel="stylesheet" href="src/css/common.190be9b5de9a0b61829b.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="src/css/common.css">
     <link rel="stylesheet" href="src/css/company.css">
 </head>
 <body>
-<h1>Hello Company</h1>
-<script src="src/js/common.190be9b5de9a0b61829b.min.js"></script>
-<script src="src/js/company.190be9b5de9a0b61829b.min.js"></script>
+<div class="company-content__container">
+    <header class="header-inner">
+        <div class="b-container header-inner__wrapper header">
+            <a href="#" class="header__link">
+                <img src="assets/icons/logo.png" alt="" class="header__logo">
+            </a>
+            <div class="header__contacts-wrapper">
+                <img src="assets/icons/phone.svg" alt="contacts" class="header__contacts">
+                <span class="header__contacts-phone">+375 29 377 56 68</span>
+            </div>
+        </div>
+        <img src="assets/icons/catalog/cap.png" alt="icon" class="header-inner__icon">
+    </header>
+
+    <main class="company-content">
+        <div class="b-container company-content__wrapper">
+            <div class="company-content__left">
+                <div class="company-content__icon-wrapper">
+                    <img class="company-content__icon" src="assets/icons/companies/ivkon.png" alt="ivkon">
+                </div>
+                <div class="company-content__contacts-wrapper">
+                    <div class="company-content__contacts-phone">+375 17 233 45 71</div>
+                    <div class="company-content__contacts-site">www.ivkon.by</div>
+                </div>
+            </div>
+            <div class="company-content__right">
+                <h1 class="company-content__title">ООО «Свиталь-Агро»</h1>
+                <div class="company-content__payment payment">
+                    <span class="payment__item payment__item--company">30</span>
+                    <span class="payment__item payment__item--company">60</span>
+                    <span class="payment__item payment__item--company">90</span>
+                </div>
+                <div class="company-content__about-company">
+                    Свиталь-Агро» является официальным дистрибьютором продукции СП «Ивкон». История кондитерской фабрики
+                    насчитывает 50 лет. Многолетний опыт квалифицированных кондитеров, экологически чистое сырьё, а
+                    также
+                    следование классическим традициям наряду с внедрением прогрессивных технологий обеспечивают высокое
+                    качество продукции. На сегодняшний день СП «Ивкон» - кондитерская компания, ведущий белорусский
+                    производитель карамели, помадных, молочных и желейных конфет. Более подробную информацию Вы можете
+                    узнать на нашем сайте.
+                </div>
+                <div class="company-content__about-products">
+                    Конфеты молочные, желейные, помадные, суфле. Карамель леденцовая, с фруктово-ягодными начинками.
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="b-container footer__items">
+            <div class="footer__item-logo">
+                <img class="footer__logo" src="assets/icons/mtbank.svg" alt="МТБанк">
+            </div>
+            <div class="footer__item-social">
+                <a class="footer__social-link" href="">
+                    <img class="footer__social-img" src="assets/icons/facebook.svg"
+                         alt="Facebook"
+                         title="Facebook">
+                </a>
+                <a class="footer__social-link" href="">
+                    <img class="footer__social-img" src="assets/icons/twitter.svg" alt="Twitter"
+                         title="Twitter">
+                </a>
+                <a class="footer__social-link" href="">
+                    <img class="footer__social-img" src="assets/icons/instagram.svg"
+                         alt="Instagram"
+                         title="Instagram">
+                </a>
+            </div>
+            <div class="footer__description">
+                <p>
+                    ЗАО «МТБанк». Все права защищены. Лицензия на осуществление банковской деятельности №13 от
+                    06.05.2013г.
+                    УНП 100394906.
+                </p>
+            </div>
+        </div>
+    </footer>
+</div>
+<script src="src/js/common.js"></script>
+<script src="src/js/company.js"></script>
 </body>
 </html>
