--- a/catalog.html
+++ b/catalog.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Catalog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/css/common.css">
-    <link rel="stylesheet" href="src/css/catalog.css">
+    <link rel="stylesheet" href="src/css/common.4a0a14a9f5fea7cf9554.min.css">
+    <link rel="stylesheet" href="src/css/catalog.4a0a14a9f5fea7cf9554.min.css">
 </head>
 <body>
 
 <header class="header-inner">
     <div class="b-container header-inner__wrapper header-inner__wrapper--catalog">
         <div class="header">
-            <a href="#" class="header__link">
+            <a href="/" class="header__link">
                 <img src="assets/icons/logo.png" alt="" class="header__logo">
             </a>
             <div class="header__contacts-wrapper">
@@ -159,8 +159,14 @@
 <div class="catalog-company">
     <div class="b-container">
         <div class="catalog-company__items">
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/lon.png">
                     </div>
@@ -175,8 +181,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/mastak.png">
                     </div>
@@ -192,8 +204,13 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme" href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/verna.png">
                     </div>
@@ -209,8 +226,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/creative.png">
                     </div>
@@ -225,8 +248,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="/company.html"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/ivkon.png">
                     </div>
@@ -241,8 +270,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/lon.png">
                     </div>
@@ -257,8 +292,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/artox.png">
                     </div>
@@ -274,8 +315,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/zizior.png">
                     </div>
@@ -290,8 +337,13 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme" href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/virus.png">
                     </div>
@@ -307,8 +359,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/toxhunt.png">
                     </div>
@@ -323,8 +381,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/pr.png">
                     </div>
@@ -339,8 +403,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/muypa.png">
                     </div>
@@ -355,8 +425,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/texno.png">
                     </div>
@@ -371,8 +447,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/electromaster.png">
                     </div>
@@ -388,8 +470,14 @@
                     </div>
                 </a>
             </div>
-            <div class="catalog-company__item">
-                <a class="company" href="#">
+            <div class="catalog-company__item scrollme">
+                <a class="company animateme"
+                   href="#"
+                   data-when="enter"
+                   data-from="0.5"
+                   data-to="0"
+                   data-translatey="50"
+                   data-opacity="0.5">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/1c.png">
                     </div>
@@ -438,7 +526,7 @@
         </div>
     </div>
 </div>
-<script src="src/js/common.js"></script>
-<script src="src/js/catalog.js"></script>
+<script src="src/js/common.4a0a14a9f5fea7cf9554.min.js"></script>
+<script src="src/js/catalog.4a0a14a9f5fea7cf9554.min.js"></script>
 </body>
 </html>
