--- a/company.html
+++ b/company.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>Company</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/css/common.css">
-    <link rel="stylesheet" href="src/css/company.css">
+    <link rel="stylesheet" href="src/css/common.4a0a14a9f5fea7cf9554.min.css">
+    <link rel="stylesheet" href="src/css/company.4a0a14a9f5fea7cf9554.min.css">
 </head>
 <body>
 <div class="company-content__container">
     <header class="header-inner">
         <div class="b-container header-inner__wrapper header">
-            <a href="#" class="header__link">
+            <a href="/" class="header__link">
                 <img src="assets/icons/logo.png" alt="" class="header__logo">
             </a>
             <div class="header__contacts-wrapper">
@@ -87,7 +87,7 @@
         </div>
     </footer>
 </div>
-<script src="src/js/common.js"></script>
-<script src="src/js/company.js"></script>
+<script src="src/js/common.4a0a14a9f5fea7cf9554.min.js"></script>
+<script src="src/js/company.4a0a14a9f5fea7cf9554.min.js"></script>
 </body>
 </html>
