--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
-    <link rel="stylesheet" href="src/css/common.1e99a9066b213fb4475b.min.css">
-    <link rel="stylesheet" href="src/css/index.1e99a9066b213fb4475b.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="src/css/common.fd3e3ed845ba2593984f.min.css">
+    <link rel="stylesheet" href="src/css/index.fd3e3ed845ba2593984f.min.css">
 </head>
 <body>
 <header class="header-inner header-inner--main">
@@ -778,7 +779,7 @@
     </form>
 </div>
 
-<script src="src/js/common.1e99a9066b213fb4475b.min.js"></script>
-<script src="src/js/index.1e99a9066b213fb4475b.min.js"></script>
+<script src="src/js/common.fd3e3ed845ba2593984f.min.js"></script>
+<script src="src/js/index.fd3e3ed845ba2593984f.min.js"></script>
 </body>
 </html>
