--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/css/common.fd3e3ed845ba2593984f.min.css">
-    <link rel="stylesheet" href="src/css/index.fd3e3ed845ba2593984f.min.css">
+    <link rel="stylesheet" href="src/css/common.ea833e455590abc8ff03.min.css">
+    <link rel="stylesheet" href="src/css/index.ea833e455590abc8ff03.min.css">
 </head>
 <body>
 <header class="header-inner header-inner--main">
@@ -728,7 +728,10 @@
 </div>
 <div class="glass">
     <form action="/" class="modal">
-        <h2 class="modal__title"></h2>
+        <header class="modal__header">
+            <h2 class="modal__title"></h2>
+            <img class="modal__close" src="assets/icons/cross.svg" alt="close">
+        </header>
         <div class="modal__item">
             <label for="fio" class="modal__item-label">Контактное лицо</label>
             <input id="fio" type="text" name="fio" placeholder="ФИО" required>
@@ -779,7 +782,7 @@
     </form>
 </div>
 
-<script src="src/js/common.fd3e3ed845ba2593984f.min.js"></script>
-<script src="src/js/index.fd3e3ed845ba2593984f.min.js"></script>
+<script src="src/js/common.ea833e455590abc8ff03.min.js"></script>
+<script src="src/js/index.ea833e455590abc8ff03.min.js"></script>
 </body>
 </html>
