--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/css/common.ea833e455590abc8ff03.min.css">
-    <link rel="stylesheet" href="src/css/index.ea833e455590abc8ff03.min.css">
+    <link rel="stylesheet" href="src/css/common.0a1df85fd49d0c6d97ed.min.css">
+    <link rel="stylesheet" href="src/css/index.0a1df85fd49d0c6d97ed.min.css">
 </head>
 <body>
 <header class="header-inner header-inner--main">
@@ -73,9 +73,10 @@
              class="smoke__img animateme"
              data-when="entry"
              data-from="0"
-             data-translatex="-25"
-             data-translatey="-25"
+             data-translatex="-35"
+             data-translatey="-35"
              data-to="1"
+             data-scale="1.15"
              data-easing="easein">
     </div>
 
@@ -199,7 +200,9 @@
 
     </div>
 
-    <div class="b-container">
+    <div class="slider-second__line-gradient">
+
+        <div class="b-container">
         <div class="slider-second">
             <!-- Swiper -->
             <div class="slider-second__swiper">
@@ -479,6 +482,7 @@
             </p>
         </footer>
     </div>
+    </div>
 
 
 </header>
@@ -496,196 +500,112 @@
             Более 1000 организаций-партнеров
         </p>
         <div class="catalog__wrapper">
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="/catalog.html"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="/catalog.html">
                     <img class="category__img" src="assets/icons/catalog/cap.png">
                     <h4 class="category__caption">
                         пищевая продукция
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/cancelar.png">
                     <h4 class="category__caption">
                         канцелярские товары
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/ploter.png">
                     <h4 class="category__caption">
                         оборудование
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item ">
+                <a class="category category--big " href="#">
                     <img class="category__img" src="assets/icons/catalog/men.png">
                     <h4 class="category__caption">
                         текстиль и одежда
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/build.png">
                     <h4 class="category__caption">
                         строительство
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/tractor.png">
                     <h4 class="category__caption">
                         сельское хозяйство
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/metal.png">
                     <h4 class="category__caption">
                         металлопрокат
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/divan.png">
                     <h4 class="category__caption">
                         мебель и интерьер
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/mashin.png">
                     <h4 class="category__caption">
                         машины и запчасти
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/computer.png">
                     <h4 class="category__caption">
                         электротехника и по
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/fura.png">
                     <h4 class="category__caption">
                         грузоперевозки
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/window.png">
                     <h4 class="category__caption">
                         окна и двери
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big" href="#">
                     <img class="category__img" src="assets/icons/catalog/marketing.png">
                     <h4 class="category__caption">
                         маркетинговые услуги
                     </h4>
                 </a>
             </div>
-            <div class="catalog__item scrollme">
-                <a class="category category--big animateme" href="#"
-                   data-when="enter"
-                   data-from="0.5"
-                   data-to="0"
-                   data-translatey="100"
-                   data-opacity="0.5"
-                   data-scale="0.75">
+            <div class="catalog__item">
+                <a class="category category--big " href="#">
                     <img class="category__img" src="assets/icons/catalog/buisness.png">
                     <h4 class="category__caption">
                         услуги для бизнеса
@@ -782,7 +702,7 @@
     </form>
 </div>
 
-<script src="src/js/common.ea833e455590abc8ff03.min.js"></script>
-<script src="src/js/index.ea833e455590abc8ff03.min.js"></script>
+<script src="src/js/common.0a1df85fd49d0c6d97ed.min.js"></script>
+<script src="src/js/index.0a1df85fd49d0c6d97ed.min.js"></script>
 </body>
 </html>
